remove -open args